--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "jeroennoten/laravel-adminlte": "^1.22",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "~2.1.0",
         "spatie/laravel-permission": "^2.7",
         "yajra/laravel-datatables-oracle": "^8.3"
     },
